--- a/requirements.txt
+++ b/requirements.txt
@@ -47,4 +47,7 @@ olamaps==0.5.2  # If available, or a suitable mapping library
 Pillow==11.2.1
 python-magic==0.4.27
 celery==5.3.4
-redis==5.0.1 
+redis==5.0.1
+
+# Base requirements
+-r requirements/production.txt 
