--- a/render.yaml
+++ b/render.yaml
@@ -13,9 +13,9 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
-      - key: ALLOWED_HOSTS
-        value: "wanderai-backend.onrender.com"
-      - key: DEBUG
+      - key: DJANGO_ALLOWED_HOSTS
+        value: "wanderai-backend.onrender.com,render.com,localhost,127.0.0.1"
+      - key: DJANGO_DEBUG
         value: "False"
 
 databases:
